# Mp3Player

./: CMakeLists.txt  README.md
lib/: sh
src/: curl_get.c  curl_get.h  debug.h  main.c  minimad.c  queue.c  queue.h
